fixed alignment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -71,12 +71,12 @@ body {
 }
 
 .introcontainer {
-    color: rgb(255, 255, 255);
-    height: 45vh;
-    width: 65vw;
-    margin: 75px 275px;
     display: flex;
-    justify-content: space-around;
+    background-color: rgba(29, 29, 29, 0);
+    border-radius: 25px;
+    margin: 35px 90px;
+    padding: 30px;
+    justify-content: center;
 }
 
 .myintro {
